2002-06-30  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (make_string): Put '"' around
	an arg.

2002-06-26  Masatake YAMATO  <yamato@redhat.com>

	* Makefile.am (libautotrace_la_SOURCES): Use '()'
	instead of "{}".

2002-06-11  Masatake YAMATO  <yamato@redhat.com>

	* README: Reorganized.

	* exception.h, input.h, output.h and types.h: Added
	extern "C" {} for C++ clinets.

2002-06-09  Masatake YAMATO  <yamato@redhat.com>

	* autotrace.c (make_string): New macro.
	(at_version, at_home_site): Use make_string.

	* configure.in (AUTOTRACE_VERSION): Remove double quotes.
	(AUTOTRACE_WEB): Likewise.
	(LT_*): Introduce libtool.
	Check the broken ImageMagick.la.

	* Makefile.am (lib_LTLIBRARIES): Introduce libtool.

2002-06-05  Masatake YAMATO  <yamato@redhat.com>

	* output.h (at_output_add_handler): Added stab.

	* output.c: Added experimental pstoedit supports.

	* output-pstoedit.[ch]: New files.

	* configure.in(AC_ARG_PROGRAM, AM_SANITY_CHECK,AC_PROG_INSTALL): 
	Added.
	Added experimental pstoedit supports.

	* acconfig.h (HAVE_LIBPSTOEDIT): Added experimental pstoedit 
	supports.

	* Makefile.am (EXTRA_DIST): Added HACKING.
	(autotrace_LDADD, INCLUDES): Added experimental pstoedit 
	supports.

2002-05-12  Masatake YAMATO  <yamato@redhat.com>

	* configure.in: linker messages that warns symbols are multiply defined are 
	suppressed when the host is Darwin.
	Suggested by Martin Kerscher <kerscher@theorie.physik.uni-muenchen.de>.
	
	* input.c (at_input_list_new): Pass NULL to GetMagickInfo
	instead of empty string.

	* output.h (at_output_add_handler): Moved from autotrace.h.

	* Makefile.am: Made output.h installed.
	
	* spline.h: Use macros newly defined in output.h.

	* output.[ch]: Added macros and functions that supports
	accessing splines data. Don't include output.h.

	* output-*.h: Use at_spline_list_array_type as a 
	formal argument instead of spline_list_array_type.

	* output-fig.c: Include spline.h.
