@@ -11,7 +11,7 @@ AUTOTRACE_MAJOR_VERSION=0
 AUTOTRACE_MINOR_VERSION=30
 AUTOTRACE_MICRO_VERSION=1
 AUTOTRACE_VERSION=${AUTOTRACE_MAJOR_VERSION}.${AUTOTRACE_MINOR_VERSION}.${AUTOTRACE_MICRO_VERSION}
-AC_DEFINE_UNQUOTED(AUTOTRACE_VERSION,$AUTOTRACE_VERSION)
+AC_DEFINE_UNQUOTED(AUTOTRACE_VERSION,"$AUTOTRACE_VERSION")
 AC_SUBST(AUTOTRACE_VERSION)
 AM_INIT_AUTOMAKE(autotrace, $AUTOTRACE_VERSION, no-define)
 
@@ -21,16 +21,16 @@ AM_INIT_AUTOMAKE(autotrace, $AUTOTRACE_VERSION, no-define)
 LT_CURRENT=0
 LT_REVISION=0
 LT_AGE=0
-AC_SUBST(LT_RELEASE)
+dnl AC_SUBST(LT_RELEASE)
 AC_SUBST(LT_CURRENT)
 AC_SUBST(LT_REVISION)
 AC_SUBST(LT_AGE)
-AC_SUBST(LT_CURRENT_MINUS_AGE)
+dnl AC_SUBST(LT_CURRENT_MINUS_AGE)
 AC_PROG_CC
 AC_PROG_LIBTOOL
 
 AUTOTRACE_WEB=http://autotrace.sourceforge.net
-AC_DEFINE_UNQUOTED(AUTOTRACE_WEB, $AUTOTRACE_WEB)
+AC_DEFINE_UNQUOTED(AUTOTRACE_WEB, "$AUTOTRACE_WEB")
 
 AM_MAINTAINER_MODE
 
@@ -38,8 +38,8 @@ AM_CONFIG_HEADER(config.h)
 
 AC_PROG_CPP
 AC_PROG_RANLIB
-AC_CANONICAL_HOST
-AC_ARG_PROGRAM
+dnl AC_CANONICAL_HOST
+dnl AC_ARG_PROGRAM
 AM_SANITY_CHECK
 AC_PROG_INSTALL
 AC_CHECK_HEADERS(malloc.h)
